--- a/src/app/components/reservation-box/reservation-box.html
+++ b/src/app/components/reservation-box/reservation-box.html
@@ -85,19 +85,19 @@
         View booking details
       </button>
     </div>
-    <div 
-      *ngIf="selectedChatSession.isHost && isPending" 
+    <div
+      *ngIf="selectedChatSession.isHost && isPending"
       class="d-flex justify-content-center mb-2">
-      <button 
-        class="btn btn-primary me-3 py-0 px-2 rounded-5 m-0" 
+      <button
+        class="btn btn-primary me-3 py-0 px-2 rounded-5 m-0"
         title="Accept"
         (click)="acceptReservation()"
-        > 
-        <i class="bi bi-check fs-2 m-0 rounded-5">          
+        >
+        <i class="bi bi-check fs-2 m-0 rounded-5">
         </i>
       </button>
-      <button 
-        class="btn btn-secondary ms-3 py-0 px-2 rounded-5 m-0" 
+      <button
+        class="btn btn-secondary ms-3 py-0 px-2 rounded-5 m-0"
         title="Decline"
         (click)="declineReservation()"
         >
@@ -140,7 +140,7 @@
       </div>
 
       <!-- Trip Dates and Guests -->
-      <div class="trip-dates" *ngIf="reservation.checkIn">
+      <!-- <div class="trip-dates" *ngIf="reservation.checkIn">
         <div class="date-row">
           <span class="date-label">Check-in</span>
           <span class="date-value">{{ reservation.checkIn }}</span>
@@ -155,7 +155,7 @@
           <span class="date-label">Guests</span>
           <span class="date-value">{{ reservation.guests }}</span>
         </div>
-      </div>
+      </div> -->
     </div>
 
 
