--- a/src/app/components/top-nav/top-nav.html
+++ b/src/app/components/top-nav/top-nav.html
@@ -1,12 +1,22 @@
-<div class="d-none d-lg-flex align-items-center top-nav-categories">
+<div
+  class="d-none d-lg-flex align-items-center top-nav-categories"
+  [ngClass]="lang.currentLang === 'ar' ? 'top-nav-ar' : 'top-nav-en'"
+>
   <a
     *ngFor="let item of navItems; let i = index"
     class="top-nav-category"
-    [ngClass]="{ 'active': currentRoute === item.route }"
+    [ngClass]="{ 'active': currentRoute === item.route, 'disabled-link': item.isNew }"
     (mouseenter)="playVideo($event)"
     (mouseleave)="pauseVideo($event)"
-    [routerLink]="item.route"
+    [routerLink]="item.isNew ? null : item.route"
+    (click)="item.isNew ? $event.preventDefault() : null"
   >
+    <span
+      *ngIf="item.isNew"
+      class="coming-soon-badge position-absolute text-uppercase"
+    >
+      {{ 'COMMON.COMING_SOON' | translate }}
+    </span>
     <img [alt]="item.label + ' Icon'" [src]="item.imgSrc" width="100" />
     <video
       class="s1kxodx6 atm_jp_1f51e7f atm_jr_1h6ojuz atm_vy_1osqo2v atm_e2_1osqo2v atm_tr_18ws4an atm_mj_glywfm s1y8p483 atm_mk_stnw88 atm_tk_idpfg4 atm_fq_idpfg4 stz1the atm_k4_kb7nvz dir dir-ltr"
