--- a/src/app/pages/wishlist/wishlist.html
+++ b/src/app/pages/wishlist/wishlist.html
@@ -1,10 +1,10 @@
 <div class="wishlists-container container mt-4">
   <div class="header">
-    <h1 class="title">Wishlists</h1>
+    <h1 class="title">{{ "HEADER.WISHLISTS" | translate }}</h1>
   </div>
 
   <div *ngIf="isLoading" class="wishlists-grid">
-    <div class="wishlist-card " *ngFor="let i of [1,2,3,4]">
+    <div class="wishlist-card" *ngFor="let i of [1,2,3,4]">
       <div class="wishlist-image shimmer"></div>
       <div class="wishlist-content p-3">
         <div class="shimmer-line mb-2" style="width: 60%; height: 16px;"></div>
@@ -41,7 +41,7 @@
       *ngFor="let wishlist of wishlists"
       class="wishlist-card"
       [attr.data-testid]="'wishlist-' + wishlist.id"
-  (click)="handleCardClick($event, wishlist.id)"
+      (click)="handleCardClick($event, wishlist.id)"
     >
       <div class="wishlist-image">
         <div>
@@ -66,7 +66,7 @@
         </div>
       </div>
 
-      <div class="wishlist-content" >
+      <div class="wishlist-content">
         <h3 class="wishlist-name">{{ wishlist.name }}</h3>
         <p class="wishlist-info">
           {{ getPropertyCount(wishlist.propertyIds) }} saved
@@ -103,20 +103,23 @@
     [modalContentClass]="'rounded-4 pt-4' "
   >
     <ng-content>
-      <p class="text-center fw-medium fs-5 mb-4 px-4" style="min-width: max-content; color: var(--secondary-text-color);">
+      <p
+        class="text-center fw-medium fs-5 mb-4 px-4"
+        style="min-width: max-content; color: var(--secondary-text-color);"
+      >
         "{{ selectedWishlist?.name }}" will be permanently deleted.
       </p>
     </ng-content>
 
-    <div modalFooter class="modal-actions modal-footer d-flex justify-content-end gap-3">
-      <button
-        class="btn px-4 py-2 cancel"
-        (click)="cancelDelete()"
-      >
+    <div
+      modalFooter
+      class="modal-actions modal-footer d-flex justify-content-end gap-3"
+    >
+      <button class="btn px-4 py-2 cancel" (click)="cancelDelete()">
         Cancel
       </button>
       <button
-        class="btn  px-4 py-2 delete-confirm"
+        class="btn px-4 py-2 delete-confirm"
         (click)="deleteSelectedWishlist()"
       >
         Delete
