--- a/src/app/pages/reset-password/reset-password.css
+++ b/src/app/pages/reset-password/reset-password.css
@@ -66,6 +66,7 @@
   padding: 10px;
   font-size: 1.2rem;
   color: black;
+  direction: ltr;
 }
 .dialog-content form .email input {
   border-top-left-radius: 10px;
