--- a/src/app/pages/login/login.css
+++ b/src/app/pages/login/login.css
@@ -76,6 +76,7 @@
   padding: 10px;
   font-size: 1.2rem;
   color: black;
+  direction: ltr;
 }
 .dialog-content form .email input {
   border-top-left-radius: 10px;
