--- a/src/app/pages/register/register.css
+++ b/src/app/pages/register/register.css
@@ -81,6 +81,7 @@
   padding: 10px;
   font-size: 1.2rem;
   color: black;
+  direction: ltr;
 }
 .dialog-content form .email input {
   border-top-left-radius: 10px;
