--- a/src/app/pages/PropertyDetails/propertImage-galary/propertImage-galary.component.html
+++ b/src/app/pages/PropertyDetails/propertImage-galary/propertImage-galary.component.html
@@ -5,7 +5,7 @@
     <h1 class="property-title">{{ Property?.title }}</h1>
 
     <div class="property-actions">
-      <button class="action-btn">
+      <button class="action-btn" (click)="onShare()">
         <i class="bi bi-share-fill"></i>
         Share
       </button>
