--- a/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.css
+++ b/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.css
@@ -99,7 +99,7 @@
 
   border-radius: 12px;
   padding: 12px;
-  margin-left: 10px;
+  /* margin-left: 10px; */
   text-align: center;
   margin-right: 17px;
 }
