--- a/src/app/pages/PropertyDetails/propertImage-galary/propertImage-galary.component.css
+++ b/src/app/pages/PropertyDetails/propertImage-galary/propertImage-galary.component.css
@@ -266,7 +266,7 @@ overflow-x: hidden;
   background-color: #f9f9f9;
   border-radius: 12px;
   padding: 10px;
-  margin-left: 20px;
+  /* margin-left: 20px; */
   text-align: center;
 }
 
